<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sebességmérő</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="action_about">About</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="options_array">
        <item>Hőmérséklet</item>
        <item>Szín: negatív</item>
        <item>Közelítés</item>
        <item>Leírás</item>
    </string-array>

    <string-array name="options_array_results">
        <item>Leírás</item>
    </string-array>


    <string name="about1">Fejlesztő:</string>
    <string name="about2">Szabados Dávid</string>
    <string name="about3">Konzulensek:</string>
    <string name="about4">Csorba Kristóf\nEkler Péter\nHärtlein Károly</string>
    <string name="about5">Budapesti Műszaki és Gazdaságtudományi Egyetem, Automatizálási és Alkalmazott Informatikai Tanszék</string>


    <string name="app_descrip">Hogyan használjuk?</string>

    <string name="app_credits1">
         Ez az alkalmazás a készülék mellett elhaladó autó sebességének mérésére készült.
        Fontos, hogy az autó dudáljon közben, hogy – az autó szemszögéből – azonos frekvenciájú hang szóljon.
        Így Doppler-effektus segítségével mérhetünk sebességet.
    </string>

    <string name="app_credits2">
         A kezdőképernyőn a mikrofon jele látható frekvenciatartományban. Itt megvizsgálhatjuk különböző hangok spektrumát
        (pl.: a fütty – mivel tiszta szinuszos hang – csak egy tüskét eredményez a spektrumon).
        A „Csúcstartó” funkció segítségével rögzíthetjük a spektrum maximális értékeit:
        ha érkezik egy nagyobb spektrumérték, akkor felülírja a maximumot.
        A spektrum alatt látható az aktuális spektrum domináns frekvencia komponense.
        Itt végezhetjük el a mérést, a „Mérés” gomb segítségével: megnyomásával rögzíti a maximális spektrumértékeket egy tömbben,
        majd átvált „Leállítás” funkcióra. \n\n
        A mérés végeztével megjelennek az eredmények. Itt látható egy spektrumszelet,
        amin megfigyelhetjük a Doppler-effektus miatt létrejött frekvenciaeltolódás.
        A megjelenő csúcsok detektálásával - közeledő és távolodó frekvenciakomponens -
        következtethetünk a sebességre az alábbi képlet alapján:
    </string>

    <string name="app_credits3">
        \r v: jármű sebessége[m/s]\n
        \rfk: közeledő frekvencia[Hz]\n
        \rft: távolodó frekvencia[Hz]\n
        \rc: hangsebesség[m/s]\n\n
        A számoláshoz szükséges a hang sebességének ismerete:
    </string>

    <string name="app_credits4">
        \r c: hangsebesség[m/s]\n
        \rT: hőmérséklet[°C]\n\n
        Mivel számos készülék nem tud külső hőmérsékletet mérni, ezért a felhasználó állíthatja be.
    </string>

    <string name="zoomMin">Alsó határ:</string>
    <string name="zoomMax">Felső határ:</string>

</resources>
