<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_descrip"
            android:textColor="#000000"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:typeface="serif"/>

        <TextView
            android:id="@+id/about_credits1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dip"
            android:text="@string/app_credits1"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/image" />

        <TextView
            android:id="@+id/about_credits2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_credits2"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/speed" />

        <TextView
            android:id="@+id/about_credits3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_credits3"
            android:textColor="#000000"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/soundspeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/soundspeed" />

        <TextView
            android:id="@+id/about_credits4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_credits4"
            android:textColor="#000000"
            android:textSize="16sp"/>


    </LinearLayout>
</ScrollView>