<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_bme_logo"
            android:src="@drawable/ic_bme_logo"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about1"
                android:id="@+id/about_developer"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="17sp"
                android:typeface="serif"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/about2"
                android:id="@+id/about_developer_name"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="17sp"
                android:typeface="serif"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/about3"
                android:id="@+id/about_consulents"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="17sp"
                android:typeface="serif"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text="@string/about4"
                android:id="@+id/about_consulent_names"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="17sp"
                android:typeface="serif"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_aut_logo"
                    android:src="@drawable/ic_bme_aut"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/about5"
                    android:id="@+id/about_bme_aut"
                    android:textSize="9sp"
                    android:layout_weight="1"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>